# rss

./: .gitignore  README.md  RELATORIO_RSS.md  ce_ceará_rss.json  find_rss.py  pb_paraíba_rss.json  pyproject.toml  relatorio_rss_brasil.json  requirements.txt  rss_feeds.json
rss_br/: __init__.py  cli.py  discover.py  http.py  io.py  models.py  report.py  util.py
rss_br/sources/: __init__.py  wikidata.py
rss_br/tests/: test_discover.py
