[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rss-br"
version = "0.1.0"
description = "Scanner de RSS/Atom/XML para jornais do Brasil (coleta, descoberta e relatório)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "rss-br contributors" }]
dependencies = [
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.3",
  "lxml>=5.2.2",
  "feedparser>=6.0.11",
  "tenacity>=8.5.0",
]

[project.scripts]
rss-br = "rss_br.cli:main"

[tool.setuptools]
packages = ["rss_br"]

[tool.setuptools.package-data]
rss_br = ["py.typed"]

